testdata/baselines/reference/submodule/conformance/stringLiteralTypesWithTemplateStrings02.errors.txt
stringLiteralTypesWithTemplateStrings02.ts(1,5): error TS2322: Type '"AB
C"' is not assignable to type '"AB
C"'.


==== stringLiteralTypesWithTemplateStrings02.ts (1 errors) ====
    let abc: "AB\r\nC" = `AB
        ~~~
!!! error TS2322: Type '"AB
!!! error TS2322: C"' is not assignable to type '"AB
!!! error TS2322: C"'.
    C`;
    let de_NEWLINE_f: "DE\nF" = `DE${"\n"}F`;